# Marble-DigitalAssistant

./: .gitignore  CMakeLists.txt  ModelTest.py  MongoTest.py  README.md  yolo.py
Source/: FileUpload.cpp  GStreamerTest.cpp  main.cpp  oldMain.cpp  temp.cpp
Source/Audio/: BoundedQueue.h  InferencePool.cpp  InferencePool.h  InferenceWorker.cpp  InferenceWorker.h  PCMQueue.cpp  PCMQueue.h  RealtimeTranscriber.cpp  RealtimeTranscriber.h  VTT.cpp  VTT.h  audioRecorder.cpp  audioRecorder.h  wavFileLoader.cpp  wavFileLoader.h  wavHeader.cpp  wavHeader.h
Source/Camera/: GStreamer.cpp  GStreamer.h  GstRecorder.cpp  GstRecorder.h  PiCam.cpp  PiCam.h
Source/Hardware/: Pinboard.cpp  Pinboard.h
Source/ImageRec/: YoloModel.cpp  YoloModel.h  onnx_classifier.cpp  onnx_classifier.h  onnx_classifier_example.cpp  onnx_diagnostics.cpp
Source/Metrics/: MetricStruct.h  MetricTracker.cpp  MetricTracker.h  MongoLink.cpp  MongoLink.h
Source/Tools/: wav_inference_test.cpp
